--- a/vollclown/page/stylesheet.css
+++ b/vollclown/page/stylesheet.css
@@ -26,7 +26,9 @@
 
 p{
   /*height: 10000px;*/
-  font: 10px berliner-grotesk, arial, sans-serif; }
+  font: 10px berliner-grotesk, arial, sans-serif;
+  color: yellow;
+ }
 
   h1{
     font: 3em berliner-grotesk, arial, sans-serif !important;
@@ -35,6 +37,7 @@ p{
 body{
   padding-top: 70px;
   /*padding-top: 70px;*/
+  background-color: pink;
 }
 
 .navbar-toggle {
