--- a/vollclown/page/stylesheet.css
+++ b/vollclown/page/stylesheet.css
@@ -26,9 +26,7 @@
 
 p{
   /*height: 10000px;*/
-  font: 10px berliner-grotesk, arial, sans-serif;
-  color: yellow;
- }
+  font: 10px berliner-grotesk, arial, sans-serif; }
 
   h1{
     font: 3em berliner-grotesk, arial, sans-serif !important;
@@ -37,7 +35,6 @@ p{
 body{
   padding-top: 70px;
   /*padding-top: 70px;*/
-  background-color: pink;
 }
 
 .navbar-toggle {
